Project/Day9/nginx-backend-deployment.yml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: bhavin1099/nginxbackend:v1     
        ports:
        - containerPort: 80
