Project/Day9/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  # type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  #type: LoadBalancer
